# deps-submodule-option

./: .gitmodules  CMakeLists.txt  foo.cpp
